added macro to get select box of query types.

--- a/src/templates/GlobalMacros.vm
+++ b/src/templates/GlobalMacros.vm
@@ -133,6 +133,17 @@ value="false" />
 </select>
 #end
 
+#macro (queryTypeSelectBox $query)
+         <select name="$queryGroup.TypeId.Key">
+          #foreach ($type in $query.getAllQueryTypes() )
+          <option value = "$type.QueryTypeId" #if( $type.QueryTypeId.equals("$query.TypeId")) selected="selected" #end >
+           $type.Name
+          </option>
+           #end
+         </select>
+#end
+
+
 #macro ( datatitle $title )
 <h3>$title</h3>
 #end
