--- a/src/templates/layouts/Default.vm
+++ b/src/templates/layouts/Default.vm
@@ -2,7 +2,7 @@
     "http://collabnet.com/dtds/collabnet_transitional_10.dtd">
 <html>
  <head>
-  <title>$page.Title</title>
+  <title>Scarab</title>
   <link rel="stylesheet" type="text/css" href="/scarab/style/main.css" />
   <link rel="stylesheet" type="text/css" href="/scarab/style/print.css" media="print" />
   <link rel="alternate stylesheet" title="compact" type="text/css" href="/scarab/style/compact.css" />
