making the "no queries to view" a message with "alert" class formatting.

--- a/src/templates/screens/QueryList.vm
+++ b/src/templates/screens/QueryList.vm
@@ -62,6 +62,6 @@
     </tr>
    </table>
 #else
-    There are no stored queries.
+    <div class="alert">There are no stored queries.</div>
 #end
   </form>
