--- a/src/templates/screens/IssueList.vm
+++ b/src/templates/screens/IssueList.vm
@@ -5,15 +5,36 @@
 #set($search = $scarabR.Search)
 #set ( $searchGroup = $intake.SearchIssue.mapTo($search) ) 
 #set ($searchType = $data.Parameters.getString("searchType"))
+#set ($resultsPerPage = $data.Parameters.getInt("resultsPerPage"))
+#set ($pageNum = $data.Parameters.getInt("pageNum"))
+
+#set( $issueList = $scarabR.IssueList )
+#if ($issueList.size() > $resultsPerPage)
+   #set ($paginated = "true")
+   #set ($issueList = $scarabR.getPaginatedList($issueList, $pageNum, $resultsPerPage))
+#end
 
 	
-	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
-	
-
-	<div class="misc"><a href="#">&laquo;</a> <a href="#">previous</a> | 3 of 5 | <a href="#">next</a> <a href="#">&raquo;</a> (<a href="ConfigureIssueList.vm">add/remove attributes from view</a>)</div>
+<P>
 
 <form name="IssueListForm" action="$action" method="post">
 <input type="hidden" name="queryString" value="$queryString">
+<input type="hidden" name="pageNum" value="$pageNum" /> 
+
+#if( $paginated)
+	<div class="misc">
+  #if( $scarabR.PrevPage != 0 )
+    #set ( $prevLink = $link.setPathInfo("resultsperpage", $resultsPerPage.toString()).setPathInfo("pageNum", $scarabR.PrevPage.toString()).setPage("IssueList.vm"))
+    <a href="$prevLink">&laquo;</a> previous |
+  #end
+     $pageNum of $scarabR.NbrPages 
+  #if( $scarabR.NextPage != 0)
+    #set ( $nextLink = $link.setPathInfo("resultsperpage", $resultsPerPage.toString()).setPathInfo("pageNum", $scarabR.NextPage.toString()).setPage("IssueList.vm"))
+    | <a href="$nextLink">&raquo;</a> next
+  #end
+    (<a href="ConfigureIssueList.vm">add/remove attributes from view</a>)</div>
+#end
+
 
 
 <p class="functnbar"><input type="submit" value="view selected (verbose)" name="eventSubmit_doViewselected" name="eventSubmit_doViewselected" />&#160;<input type="submit" value="view all (verbose)" name="eventSubmit_doViewall" /></p>
@@ -24,8 +45,6 @@
 &#160;<input type="submit" value="save query" name="eventSubmit_doSavequery" />#end</p>
 	
 	<h3>Search Results</h3>
-
-
 
 	<div class="datatable">
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
@@ -63,7 +82,7 @@
 #end
 		</table>
 	</div>
-	<div class="misc">issues per page:&#160; <input type="radio"  value="25"/> 25 <input type="radio"  value="50"/> 50 <input type="radio"  value="50"/> 75 <input type="radio"  value="100"/> 100&nbsp; <input type="submit" name="eventSubmit_doSearch" value="Refresh"></div>
+	<div class="misc">issues per page:&#160; <input type="radio"  value="2" name="resultsPerPage" #if( $resultsPerPage == 2 ) checked="checked" #end /> 2 <input type="radio" " name="resultsPerPage" value="50" #if( $resultsPerPage == 50 ) checked="checked" #end /> 50 <input type="radio" name="resultsPerPage"  value="75" #if( $resultsPerPage == 75 ) checked="checked" #end /> 75 <input type="radio"  name="resultsPerPage" value="100" #if( $resultsPerPage == 100 ) checked="checked" #end /> 100&nbsp; <input type="submit" name="eventSubmit_doSearch" value="Refresh"></div>
 
 <p class="functnbar"><input type="submit" value="view selected (verbose)" name="eventSubmit_doViewselected" name="eventSubmit_doViewselected" />&#160;<input type="submit" value="view all (verbose)" name="eventSubmit_doViewall" /></p>
 
@@ -73,6 +92,18 @@
 &#160;<input type="submit" value="save query" name="eventSubmit_doSavequery" />#end</p>
 	
 	
-	<div class="misc"><a href="#">&laquo;</a> <a href="#">previous</a> | 3 of 5 | <a href="#">next</a> <a href="#">&raquo;</a> (<a href="ConfigureIssueList.vm">add/remove attributes from view</a>)</div>
+#if( $paginated)
+	<div class="misc">
+  #if( $scarabR.PrevPage != 0 )
+    #set ( $prevLink = $link.setPathInfo("resultsperpage", $resultsPerPage.toString()).setPathInfo("pageNum", $scarabR.PrevPage.toString()).setPage("IssueList.vm"))
+    <a href="$prevLink">&laquo;</a> previous |
+  #end
+     $pageNum of $scarabR.NbrPages 
+  #if( $scarabR.NextPage != 0)
+    #set ( $nextLink = $link.setPathInfo("resultsperpage", $resultsPerPage.toString()).setPathInfo("pageNum", $scarabR.NextPage.toString()).setPage("IssueList.vm"))
+    | <a href="$nextLink">&raquo;</a> next
+  #end
+    (<a href="ConfigureIssueList.vm">add/remove attributes from view</a>)</div>
+#end
 $intake.declareGroups()
 </form>
