moved permission check to View Issue macro. added comments. made ViewIssueLong paginated.

--- a/src/templates/macros/ViewIssueMacro.vm
+++ b/src/templates/macros/ViewIssueMacro.vm
@@ -1,5 +1,7 @@
 
 #macro (viewIssue $currentIssue )
+    #set ($module = $user.CurrentModule)
+    #set ( $canEdit = $security.hasPermission("Issue | Edit", $module) )
     #set ($attrValues = $currentIssue.ModuleAttributeValuesMap)
 
       <div class="grouper">
