--- a/src/templates/screens/ViewIssueLong.vm
+++ b/src/templates/screens/ViewIssueLong.vm
@@ -1,17 +1,36 @@
-#set ($action = $link.setPage("ViewIssueLong.vm").setAction("ModifyIssue").addPathInfo("nextTemplate", "ViewIssueLong.vm"))
+##set ($action = $link.setPage("ViewIssueLong.vm").setAction("ModifyIssue").addPathInfo("nextTemplate", "ViewIssueLong.vm"))
 
 #set ($user = $data.User)
-#set ($issueIdList = $user.getTemp("issueIdList"))
+#set( $issueList = $scarabR.IssueList )
+#set ($resultsPerPage = $data.Parameters.getInt("resultsPerPage"))
+#set ($pageNum = $data.Parameters.getInt("pageNum"))
 
-#if( $issueIdList )
+#if ($issueList.size() > $resultsPerPage)
+   #set ($paginated = "true")
+   #set ($issueList = $scarabR.getPaginatedList($issueList, $pageNum, $resultsPerPage))
+#end
+
+
+#if( $issueList )
    
-  <p>&#171; previous | 1 of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
+## PAGINATION
+#if( $paginated)
+	<div class="misc">
+  #if( $scarabR.PrevPage != 0 )
+    #set ( $prevLink = $link.setPathInfo("resultsperpage", $resultsPerPage.toString()).setPathInfo("pageNum", $scarabR.PrevPage.toString()).setPage("ViewIssueLong.vm"))
+    <a href="$prevLink">&laquo;</a> previous |
+  #end
+     $pageNum of $scarabR.NbrPages 
+  #if( $scarabR.NextPage != 0)
+    #set ( $nextLink = $link.setPathInfo("resultsperpage", $resultsPerPage.toString()).setPathInfo("pageNum", $scarabR.NextPage.toString()).setPage("ViewIssueLong.vm"))
+    | <a href="$nextLink">&raquo;</a> next
+  #end
+#end
 
-  <form name="IssueForm" method="post" action="$action" >
+  <form name="IssueForm" method="post" action="$link.setAction("ModifyIssue")" >
 
-  #foreach ($id in $issueIdList)
+  #foreach ($currentIssue in $issueList)
 
-    #set( $currentIssue = $scarabR.getIssue($id.toString()) )
     #viewIssue ($currentIssue)
 
   #end
